# thrum

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
agents/: ci_fixer.md  implementer_loom.md  implementer_meld.md  implementer_synth.md  implementer_thrum.md  integrator.md  planner.md  reviewer.md
configs/: pipeline.toml  repos.toml  safety.toml
crates/thrum-api/: Cargo.toml
crates/thrum-api/assets/: dashboard.html  live.css  live.html  review.css  review.html  style.css
crates/thrum-api/src/: a2a.rs  dashboard.rs  lib.rs  sse.rs
crates/thrum-cli/: Cargo.toml  build.rs
crates/thrum-cli/src/: main.rs  watch.rs
crates/thrum-core/: Cargo.toml
crates/thrum-core/benches/: task_ops.rs
crates/thrum-core/src/: a2a.rs  agent.rs  budget.rs  checkpoint.rs  ci.rs  consistency.rs  convergence.rs  coordination.rs  event.rs  gate.rs  lib.rs  memory.rs  repo.rs  role.rs  safety.rs  session_export.rs  spec.rs  sphinx_needs.rs  subsample.rs  task.rs  telemetry.rs  traceability.rs  verification.rs
crates/thrum-db/: Cargo.toml
crates/thrum-db/benches/: task_store.rs
crates/thrum-db/src/: budget_store.rs  checkpoint_store.rs  convergence_store.rs  gate_store.rs  lib.rs  memory_store.rs  meta_store.rs  session_store.rs  task_store.rs  trace_store.rs
crates/thrum-db/tests/: lifecycle.rs  loom_claims.rs  memory_lifecycle.rs  parallel_claim.rs
crates/thrum-runner/: Cargo.toml
crates/thrum-runner/src/: anthropic.rs  backend.rs  ci.rs  claude.rs  cli_agent.rs  coordination_hub.rs  event_bus.rs  git.rs  lib.rs  openai_compat.rs  parallel.rs  sandbox.rs  session_export.rs  subprocess.rs  sync.rs  watcher.rs  worktree.rs
docs/: conf.py  index.rst
docs/qualification/: oss_management.rst  tool_classification.rst
docs/standards/: aspice.rst  iec62304.rst  iso26262.rst
docs/traceability/: loom.rst  meld.rst  synth.rst
examples/minimal/: pipeline.toml  repos.toml
examples/pulseengine/: pipeline.toml  repos.toml
fixtures/: pipeline_test.wat
scripts/: pre-commit
skills/thrum/: SKILL.md
skills/thrum/scripts/: approve-task.sh  check-status.sh  poll-approvals.sh  reject-task.sh  view-diff.sh
