[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# AI SDKs
async-openai = "0.27"

# Database (pure Rust embedded key-value store)
redb = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging + Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"

# Containers / Sandbox
bollard = "0.18"
futures-util = "0.3"

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# Git
git2 = "0.19"

# TOML parsing for consistency checks
cargo_toml = "0.20"

# Testing
proptest = "1"
loom = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
thrum-core = { path = "crates/thrum-core" }
thrum-db = { path = "crates/thrum-db" }
thrum-runner = { path = "crates/thrum-runner" }
thrum-api = { path = "crates/thrum-api" }
