[package]
name = "thrum-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thrum-core = { workspace = true }
thrum-db = { workspace = true }
thrum-runner = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
redb = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
tokio = { workspace = true }
