[package]
name = "thrum-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "thrum"
path = "src/main.rs"

[dependencies]
thrum-core = { workspace = true }
thrum-db = { workspace = true }
thrum-runner = { workspace = true }
thrum-api = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redb = { workspace = true }
toml = { workspace = true }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
